test/corpus/01_protocol.txt
========================
Protocol Definition
========================

protocol MyProtocol {}

---

(program
  (protocol_declaration (identifier)
    (protocol_block)
  )
)

========================
Protocol With Namespace
========================

@namespace("my.amazing_namespace.v1")
protocol MyProtocol {

}

---

(program
  (protocol_declaration
    (namespace_declaration
        (string))
    (identifier)
    (protocol_block
    )
  )
)
