test/corpus/03_imports.txt
========================
Imports
========================

import idl "foo.avdl";
import protocol "foo.avpr";
import schema "foo.avsc";
---

(program
  (import_declaration
    (identifier)
    (literal_type (string))
  )
  (import_declaration
    (identifier)
    (literal_type (string))
  )
  (import_declaration
    (identifier)
    (literal_type (string))
  )
)
