test/corpus/04_enumerations.txt
========================
Enumeration
========================

enum Shapes {
  SQUARE, TRIANGLE, CIRCLE, OVAL
}
---

(program
  (enum_declaration
    (identifier)
    (enum_block
        (enumeral (identifier))
        (enumeral (identifier))
        (enumeral (identifier))
        (enumeral (identifier))
    )
  )
)

========================
Enumeration With Default Value
========================

enum Shapes {
  SQUARE, TRIANGLE, CIRCLE, OVAL
} = CIRCLE;
---

(program
  (enum_declaration
    (identifier)
    (enum_block
        (enumeral (identifier))
        (enumeral (identifier))
        (enumeral (identifier))
        (enumeral (identifier))
    )
    (default_enumeral
        (identifier)
    )
  )
)
