test/corpus/04_fixed.txt
========================
Fixed Length Field
========================

fixed MD5(16);
fixed SHA256(32);

---

(program
  (fixed_declaration
    (call_expression
      (identifier)
      (arguments
        (literal_type
          (number)
        )
      )
    )
  )
  (fixed_declaration
    (call_expression
      (identifier)
      (arguments
        (literal_type
          (number)
        )
      )
    )
  )
)
