test/corpus/10_nullable.txt
========================
Union
========================

record MyProtocol {
  string? optionalString;
}

---

(program
  (record_declaration (identifier)
    (statement_block
      (field_declaration
        (nullable
          (primitive_type)
        )
        (identifier)
      )
    )
  )
)

========================
Union With Default Value
========================

record RecordWithUnion {
  string? optionalString2 = null;
}

---

(program
  (record_declaration
    (identifier)
    (statement_block
      (field_declaration
        (nullable
          (primitive_type)
        )
        (default_value_expression
          (identifier)
          (value
            (literal_type
              (null)
            )
          )
        )
      )
    )
  )
)
